kubernetes/monitoring/overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: grafana
spec:
  rules:
  - host: dashboards.operationcode.org
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - dashboards.operationcode.org
    secretName: grafana-tls
